fix jeader dropdown issue on Safari

--- a/web/ui/dashboard/src/pages/dashboard/style.scss
+++ b/web/ui/dashboard/src/pages/dashboard/style.scss
@@ -59,7 +59,6 @@
 			border: 1px solid #edeff5;
 			left: 0;
 			right: 0;
-			display: none;
 			z-index: 10;
 
 			ul {
@@ -72,12 +71,6 @@
 					font-size: 14px;
 					cursor: pointer;
 				}
-			}
-		}
-
-		&:focus-within {
-			.dropdown {
-				display: block;
 			}
 		}
 	}
